2005-04-09  Sebastien Pouliot  <sebastien@ximian.com> 

	* tlsasync.cs: New. Async HttpWebRequest and streams using HTTP or 
	HTTPS GET. Display the web page if only one URL is supplied.
	* Makefile: Build tlsasync tool.

2005-04-08  Sebastien Pouliot  <sebastien@ximian.com> 

	* tlsmulti.cs: Display the web page if only one URL is supplied. Show
	usage if no URL is specified.

2005-04-07  Sebastien Pouliot  <sebastien@ximian.com> 

	* tlsmulti.cs: New. Async GET tests using HttpWebRequest.
	* Makefile: Build tlsmulti tool.

2004-02-25  Sebastien Pouliot  <sebastien@ximian.com>

	* tlstest.cs: Updated to support Basic and Digest authentication. Also
	support ICertificatePolicy for WebRequests.

2004-02-23  Sebastien Pouliot  <sebastien@ximian.com>

	* tlstest.cs: New. Tool to test for SSLv3 and TLSv1 stream 
	implementation.