@@ -15,13 +15,13 @@ run-test-local:
 clean-local:
 	rm -f *.exe *.pdb
 
-sources = tlstest.cs tlsmulti.cs tlsasync.cs
+sources = tlstest.cs tlsmulti.cs tlsasync.cs tlssave.cs
 
 DISTFILES = $(sources)
 
 dist-local: dist-default
 
-all: tlstest.exe tlsmulti.exe tlsasync.exe
+all: tlstest.exe tlsmulti.exe tlsasync.exe tlssave.exe
 
 tlstest.exe: tlstest.cs
 	$(CSCOMPILE) /target:exe /out:$@ $^
@@ -30,4 +30,7 @@ tlsmulti.exe: tlsmulti.cs
 	$(CSCOMPILE) /target:exe /out:$@ $^
 
 tlsasync.exe: tlsasync.cs
+	$(CSCOMPILE) /target:exe /out:$@ $^
+
+tlssave.exe: tlssave.cs
 	$(CSCOMPILE) /target:exe /out:$@ $^
