@@ -1,0 +1,30 @@
+The tlstest directory contains several test tools. They were made to test
+the SSL/TLS implementation but most of them are also good test for regular
+HTTP (when used with HttpWebRequest).
+
+
+tlstest
+	* works with HttpWebRequest (--web) or SslClientStream (--ssl | --tls)
+	* work synchronously;
+
+tlsmulti
+	* only works with HttpWebRequest (http or https)
+	* work asynchronously with Begin|EndGetResponse;
+	* can download up to 64 URLs simulteanously;
+
+tlsasync
+	* only works with HttpWebRequest (http or https)
+	* work asynchronously with Begin|EndGetResponse and [Begin|End]
+	GetResponseStream;
+	* can download up to 64 URLs simulteanously;
+
+tlssave
+	* only works with HttpWebRequest (http or https)
+	* work asynchronously with Begin|EndGetResponse and [Begin|End]
+	GetResponseStream;
+	* saves every downloaded URL into a file (1, 2, ...);
+	* used to download and compare (md5sum) very large files;
+
+
+Note: With Mono the HttpWebRequest will call the SslClientStream for HTTPS.
+However under the MS runtime SslClientStream won't be called.
